@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.jzy3d</groupId>
 	<artifactId>panama-gl</artifactId>
-	<version>2.1.0-SNAPSHOT</version>
+	<version>1.0.0-SNAPSHOT</version>
 	<name>Panama GL</name>
 	<packaging>pom</packaging>
 
@@ -18,8 +18,7 @@
 	</properties>
 
 	<modules>
-		<module>panama-gl-core</module>
-
+		<module>panama-gl-api</module>
 		<module>panama-gl-wrappers-linux</module>
 		<module>panama-gl-wrappers-macos</module>
 		<module>panama-gl-wrappers-windows</module>
@@ -98,6 +97,12 @@
 						<include>**/*Test.java</include>
 						<include>**/ITTest*.java</include>
 					</includes>
+
+					<!-- Configure Panama -->
+					<argLine>
+						--enable-native-access=ALL-UNNAMED --add-modules jdk.incubator.foreign
+					</argLine>
+
 				</configuration>
 			</plugin>
 
@@ -165,13 +170,13 @@
 							<!-- Ensure stack trace get displayed -->
 							<trimStackTrace>false</trimStackTrace>
 
-							
+
 							<!-- Parallel tests DISABLE PARALLEL TEST OTHERWISE CANVAS DO NOT UPDATE
 								PROPERLY (?!)
-							<parallel>methods</parallel> 
+							<parallel>methods</parallel>
 								<forkCount>1</forkCount>-->
 							<useUnlimitedThreads>true</useUnlimitedThreads>
-							
+
 							<!-- Configure Panama -->
 							<argLine>
 								--enable-native-access=ALL-UNNAMED --add-modules jdk.incubator.foreign -Djava.library.path=.:/usr/lib/x86_64-linux-gnu/
